--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -20,7 +20,7 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -29,7 +29,6 @@ body {
   align-items: center;
   min-width: 100vw;
   min-height: 100vh;
-  font-size: 16px;
 }
 
 @media (min-width:768px) {
@@ -67,10 +66,10 @@ body {
   }
 }
 
-ul {
-  scroll-behavior: auto;
-  scrollbar-color: rgba(255, 255, 255, 1) transparent;
-} 
+textarea {
+  border: none;
+  resize: none;
+}
 
 
 
