--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,18 +4,40 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #171d25;
-  background-image: linear-gradient(rgba(144, 149, 144, 0.1) .1em, transparent .1em), linear-gradient(90deg, rgba(144, 149, 144, 0.1).1em, transparent .1em);
-  background-size: 4em 4em;
-  background-repeat: repeat;
-
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* Color Scheme */
+
+@media (prefers-color-scheme: dark){
+  *{
+    background-color: #171d25;
+    color: antiquewhite;
+    scrollbar-color: antiquewhite transparent !important;
+  }
+  .border {
+    border: 1px solid antiquewhite;
+  }
+
+  
+}
+
+@media (prefers-color-scheme: light){
+  *{
+    background-color: antiquewhite;
+    color: #171d25;
+    scrollbar-color: #171d25 transparent !important;
+  }
+  .border {
+    border: 1px solid #171d25;
+  }
+}
+
+/* Universal Styling */
 
 *{
   margin: 0;
@@ -30,6 +52,13 @@ body {
   min-width: 100vw;
   min-height: 100vh;
 }
+
+
+textarea {
+  border: none;
+}
+
+/* Font sizes */
 
 @media (min-width:768px) {
   body {
@@ -47,27 +76,25 @@ body {
   }
 }
 
+/* container */
+
 .container{
   display: flex;
   width: 100vw;
-  justify-content: space-around;
-  align-items: center;
 }
 
 @media screen and (width < 800px){
   .container{
     flex-direction: column;
+    align-items: center;
   }
 }
 
 @media screen and (width > 800px){
   .container{
     flex-direction: row;
+    justify-content: space-around;
   }
-}
-
-textarea {
-  border: none;
 }
 
 
