--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,11 @@
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  
+  display:flex;
+  flex-direction: column;
+  min-height:100vh;
+  min-width:100vw;
 
   color-scheme: light dark;
 
@@ -11,7 +16,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#app {
+  display:flex;
+  flex-direction: column;
+  min-height:100vh;
+  min-width: 100vw;
+}
+
+#container {
+  flex:1;
+}
+
 /* Color Scheme */
+
 
 @media (prefers-color-scheme: dark){
   *{
@@ -19,8 +36,17 @@
     color: antiquewhite;
     scrollbar-color: antiquewhite transparent !important;
   }
+  
   .border {
     border: 1px solid antiquewhite;
+  }
+
+  #container {
+
+    background-image: linear-gradient(rgba(41, 42, 48, 1) 0.1em, transparent 0.1em),
+    linear-gradient(90deg, rgba(41, 42, 48, 1) 0.1em, transparent 0.1em);
+    background-size: 4em 4em;
+    background-repeat: repeat;
   }
 
   
@@ -32,8 +58,17 @@
     color: #171d25;
     scrollbar-color: #171d25 transparent !important;
   }
+
   .border {
     border: 1px solid #171d25;
+  }
+
+  #container {
+    background-image: linear-gradient(rgba(41, 42, 48, 0.1) 0.1em, transparent 0.1em),
+    linear-gradient(90deg, rgba(41, 42, 48, 0.1) 0.1em, transparent 0.1em);
+    background-size: 4em 4em;
+    background-repeat: repeat;  
+    flex:1;
   }
 }
 
@@ -46,9 +81,6 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   min-width: 100vw;
   min-height: 100vh;
 }
@@ -80,7 +112,10 @@ textarea {
 
 .container{
   display: flex;
-  width: 100vw;
+  min-width: 100%;
+  background-color: transparent;
+  margin-top : 1em;
+  margin-bottom: 1em;
 }
 
 @media screen and (width < 800px){
@@ -94,6 +129,7 @@ textarea {
   .container{
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
   }
 }
 
