--- a/frontend/src/components/footer/public/style.css
+++ b/frontend/src/components/footer/public/style.css
@@ -2,33 +2,18 @@
     text-decoration: none;
 }
 
-.f-info-links a{
-    text-decoration: none;
-    color:#222222 !important;
-}
-
-.f-info-links a :hover{
-    text-decoration: underline;
-}
-
-.f-info-links{
-    width:100%;
-}
-
-.f-info-socials, .f-info-brand, .f-info-links{
+.f-info-brand{
     width:100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1rem;
+    font-weight: 900;
 }
 
-.f-info-links a {
-    margin-left: 1rem;
-    font-size: 0.8rem;
-}
 
 .f-info-socials i{
-    font-size:1.2rem;
+    font-size:1rem;
     margin-right: 1rem;
 }
 
@@ -39,5 +24,4 @@
     justify-content: center;
     align-items: space-evenly !important;
     height:8rem;
-    background-color: #ebebeb;
 }
