--- a/frontend/src/components/graph/barGraph/public/style.css
+++ b/frontend/src/components/graph/barGraph/public/style.css
@@ -1,7 +1,8 @@
 .graphDiv {
     overflow: scroll;
     padding-left: 1em;
-
+    margin-top: 1em;
+    margin-bottom: 1em;
     height: fit-content;
 }
 
